--- a/docs/report.tex
+++ b/docs/report.tex
@@ -117,11 +117,12 @@
 \title{
 \textbf{SkyeFS:}\\
 \textbf{Distributed Directories using Giga+ and PVFS}
+~\thanks{~\NOTICE}
 }
 \author{\AUTHORS \\~\\ \EMAIL}
 
 \date{May 2012}
-\trnumber{CMU-PDL-12-XXX}
+\trnumber{CMU-PDL-12-104}
 
 \abstract{
   \small
@@ -781,10 +782,6 @@ directory is at load balance.  We've also demonstrated that Giga+ preserves
 the desired responsiveness properties of PVFS in the case of small
 directories.  We note that future work is needed to overcome performance
 problems in PVFS exposed by the SkyeFS workloads.
-
-
-\newpage
-\small
 
 \section*{Acknowledgements}
 We'd like to thank Sam Lang and Phil Carns for their advice and assistance in
