Small swapnil note.

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -117,7 +117,6 @@
 \title{
 \textbf{SkyeFS:}\\
 \textbf{Distributed Directories using Giga+ and PVFS}
-~\thanks{~\NOTICE}
 }
 \author{\AUTHORS \\~\\ \EMAIL}
 
@@ -784,17 +783,17 @@ directories.  We note that future work is needed to overcome performance
 problems in PVFS exposed by the SkyeFS workloads.
 
 \section*{Acknowledgements}
-We'd like to thank Sam Lang and Phil Carns for their advice and assistance in
-working with PVFS.  This material is based upon research supported in part by
-the Notional Science Foundation under contract NFS CNS-1042543 (PRObE) and
-the Los Alamos National Lab under contract number DE-AC52-06NA25396 (IRHPIT).
-We also thank the members and companies of the PDL Consortium (including
-Actifio, American Power Conversion, EMC Corporation, Emulex, Facebook,
-Fusion-io, Google, Hewlett-Packard Labs, Hitachi, Huawei Technologies Co.,
-Intel Corporation, Microsoft Research, NEC Laboratories, NetApp, Inc., Oracle
-Corporation, Panasas, Riverbed, Samsung Information Systems America, Seagate
-Technology, STEC, Inc., Symantec Corporation, VMware, Inc., Western Digital)
-for their interest and support.
+We'd like to thank Sam Lang, Phil Carns and Rob Ross for their advice and
+assistance in working with PVFS.  This material is based upon research
+supported in part by the Notional Science Foundation under contract NFS
+CNS-1042543 (PRObE) and the Los Alamos National Lab under contract number
+DE-AC52-06NA25396 (IRHPIT).  We also thank the members and companies of the
+PDL Consortium (including Actifio, American Power Conversion, EMC Corporation,
+Emulex, Facebook, Fusion-io, Google, Hewlett-Packard Labs, Hitachi, Huawei
+Technologies Co., Intel Corporation, Microsoft Research, NEC Laboratories,
+NetApp, Inc., Oracle Corporation, Panasas, Riverbed, Samsung Information
+Systems America, Seagate Technology, STEC, Inc., Symantec Corporation, VMware,
+Inc., Western Digital) for their interest and support.
 
 \begin{thebibliography}{9}
 
@@ -803,19 +802,16 @@ for their interest and support.
     Directories with Millions of Files.
     Proceedings of FAST '11: 9th USENIX Conference on File and Storage
     Technologies.
-    \url{http://www.pdl.cmu.edu/PDL-FTP/PDSI/CMU-PDL-08-110_abs.shtml}
 
   \bibitem{pvfs}
     P. H. Carns, R. B. W. B. Ligon III, and R. Thakur. PVFS: A Parallel File
     System For Linux Clusters. Proceedings of the 4th Annual Linux Showcase
     and Conference, 2000.
-    \url{http://ftp.mcs.anl.gov/pub/tech_reports/reports/P804.pdf}
 
   \bibitem{orange}
     S. Yang, W. Ligon, and E. Quarles. Scalable Distributed Directory
     Implementation on Orange File System. 7th IEEE International Workshop on
     Storage Network Architecture and Parallel I/O, 2011.
-    \url{http://storageconference.org/2011/Papers/SNAPI/6.Yang.pdf}
 
   \bibitem{rpc}
     Srinivasan, R. RPC: Remote Procedure Call Protocol Specification Version 2.
